--- a/html/decrypter.html
+++ b/html/decrypter.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Décrypter | CyberWorld</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
   <nav>
-    <img src="/images/logo-cyberworld.png" alt="CyberWorld Logo">
+    <img src="/images/logo-cyberworld.png" alt="CyberWorld Logo" />
     <span>CyberWorld</span>
     <button class="menu-toggle" onclick="toggleInfo()">❗</button>
-    <div class="menu-links" id="menuLinks">
-      <a href="/html/crypter.html">Crypter</a>
-      <a href="/html/decrypter.html">Décrypter</a>
-    </div>
-  </nav>
+   <div class="menu-links" id="menuLinks">
+  <a href="/html/crypter.html">🔒 Crypter Texte</a>
+  <a href="/html/decrypter.html">🔓 Décrypter Texte</a>
+  <a href="/html/cle.html">🔑 Clés Crypto</a>
+</div>
+   </nav>
 
   <div class="content">
     <h1>Simulateur de Décryptage</h1>
     <div class="crypto-box">
       <label for="message">Message à décrypter :</label>
-      <textarea id="message" placeholder="Colle ici le texte crypté..."></textarea>
+      <textarea id="message" placeholder="Colle ici ton message crypté..."></textarea>
 
       <label for="key">Clé de décryptage (nombre) :</label>
       <input type="number" id="key" placeholder="Ex : 3" />
@@ -36,20 +37,41 @@
     </div>
   </div>
 
-  <footer>
-    Projet réalisé par <strong>Makhlouf, Macire et Camron</strong><br>
-    📧 Contact : <a href="mailto:makhlouf.bouferguene@lycee-jeanrostand.fr">makhlouf.bouferguene@lycee-jeanrostand.fr</a>
-  </footer>
+  <!-- Module Image -->
+  <div class="content">
+    <h2>🖼️ Décrypter une image (Base64)</h2>
+    <label for="imageInput" class="custom-file-label">📁 Choisir une image</label>
+    <input type="file" id="imageInput" accept="image/*" onchange="afficherNomFichier()" />
+    <span id="nomFichier">Aucun fichier choisi</span>
 
-  <!-- Panneau d'info -->
-  <div class="info-panel" id="infoPanel">
-    <div class="info-content">
-      <h2>À propos du site</h2>
-      <p>Ce site permet de décrypter un texte crypté avec une clé (chiffrement César).</p>
-      <p>Utilisez la même clé que celle utilisée pour crypter.</p>
+    <div class="btn-group">
+      <button onclick="convertToBase64()">Afficher le code</button>
+      <button onclick="afficherImage()">Afficher l'image</button>
+    </div>
+
+    <textarea id="base64Output" class="textarea-base64" placeholder="Base64 ici..."></textarea>
+
+    <div class="output">
+      <p><strong>Image :</strong></p>
+      <img id="imageAffichee" style="max-width: 100%; border-radius: 10px;" />
+    </div>
+  </div>
+
+  <!-- Info modale -->
+  <div class="info-modal" id="infoPanel">
+    <div class="info-modal-content">
+      <h3>À propos du site</h3>
+      <p>
+        🔓 Ce site permet de décrypter un message (chiffré avec une clé numérique type César) ou de lire une image encodée en base64.
+      </p>
       <button onclick="closeInfo()">Fermer</button>
     </div>
   </div>
+
+  <footer>
+    Projet réalisé par <strong>Makhlouf, Macire et Camron</strong><br />
+    📧 <a href="mailto:makhlouf.bouferguene@lycee-jeanrostand.fr">makhlouf.bouferguene@lycee-jeanrostand.fr</a>
+  </footer>
 
   <script src="/js/decrypter.js"></script>
 </body>
